--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.8",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.5",
+    "chart.js": "^4.0.1",
+    "dotenv": "^16.0.3",
+    "expo": "^47.0.0",
+    "expo-constants": "~14.0.2",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
