--- a/package.json
+++ b/package.json
@@ -10,28 +10,40 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/firestore": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.5",
-    "chart.js": "^4.0.1",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
     "expo": "^47.0.0",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
-    "firebase": "^9.15.0",
+    "firebase": "^9.17.2",
+    "firebase-admin": "^11.5.0",
     "react": "18.1.0",
-    "react-chartjs-2": "^5.0.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.70.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "@faker-js/faker": "^7.6.0"
   },
   "private": true
 }
